# meal-plan-ai

./: README.md  example.env  main.py  memory.json  pyproject.toml
data/: recipes.csv  recipes_tagged.csv
data/chroma/: chroma.sqlite3
mcp_server/: __main__.py  server.py  shopping_list.json
scripts/: embed_recipes.py
